<resources>
    <string name="app_name">Auto Tall</string>
    <string name="contrasena">Contrasena</string>
    <string name="registrar">Registrar</string>
    <string name="volver">Volver</string>
    <string name="nombres">Nombre</string>
    <string name="chofer">Chofer</string>
    <string name="administrativo">Administrativo</string>
    <string name="tipo">Tipo</string>
    <string name="tipo_de_usuario">Tipo de Usuario</string>
    <string name="cambiar_placa">Cambiar Placa</string>
    <string name="registro">Registro</string>
    <string name="contactenos">Contactenos</string>
    <string name="nombre">Nombre</string>
    <string name="todos">TODO</string>
    <string name="ingresar">Ingresar</string>
    <string name="contrase_a">Contraseña</string>
    <string name="ruta_camion">Ruta Camion</string>
    <string name="agregar_fotos">Agregar Fotos</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="cambiar_contrase_a">Cambiar Contraseña</string>
    <string name="cambiar_nombre">Cambiar Nombre</string>
    <string name="usuario">Usuario</string>
    <string name="mapa">Mapa</string>
    <string name="editar">Editar</string>
    <string name="todo">TODO</string>
    <string name="title_activity_prueba">Prueba</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="textview">TextView</string>
    <string name="nombre_usuario">Nombre Usuario</string>
    <string name="title_activity_editar_usuario">Editar Usuario</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>
