<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alwaysDrawnWithCache="false"
    android:background="#8BC34A"
    android:backgroundTintMode="add"
    android:minHeight="@android:dimen/app_icon_size"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="307dp"
        android:layout_height="93dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:lineSpacingExtra="36sp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#102B6A"
        android:textSize="36sp"
        android:textStyle="bold"
        android:typeface="sans"
        android:visibility="visible"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/app_name"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/usuarioA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="247dp"
        android:layout_height="108dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/todo"
        android:src="@android:drawable/ic_menu_myplaces"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="162dp"
        android:layout_height="39dp"
        android:layout_marginStart="124dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="19dp"
        android:text="@string/nombre"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/usuarioA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="172dp"
        android:layout_height="37dp"
        android:layout_marginStart="119dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="25dp"
        android:text="@string/contrase_a"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="iniciarSesion"
        android:text="Ingresar"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        tools:ignore="MissingConstraints"
        android:background="#102B6A"/>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="102dp"
        android:layout_height="59dp"
        android:layout_marginStart="154dp"
        android:layout_marginEnd="155dp"
        android:contentDescription="@string/todo"
        android:src="@android:drawable/stat_sys_headset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.86"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>